Add local images and update site

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div>
           <img
-            src="https://images.unsplash.com/photo-1602589484424-565160516a83?auto=format&fit=crop&w=870&q=80"
+            src="images/hero.png"
             alt="Rider wearing Northern Armor gear"
             class="w-full rounded-2xl shadow-lg"
           />
@@ -136,28 +136,15 @@
     <section id="collection" class="bg-[var(--na-off)] py-16">
       <div class="mx-auto max-w-7xl px-4">
         <h2 class="text-3xl font-extrabold mb-10">Our Gear</h2>
-        <div class="grid md:grid-cols-3 gap-8">
+        <div class="grid md:grid-cols-4 gap-8">
           <div
             class="bg-white p-6 rounded-2xl text-center shadow-sm hover:shadow-md transition"
           >
-            <svg
-              class="w-12 h-12 mx-auto text-[var(--na-red)] mb-4"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="1.5"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 6l8 4-8 4-8-4 8-4z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4 10v6l8 4 8-4v-6"
-              />
-            </svg>
+            <img
+              src="images/jacket.png"
+              alt="Northern Armor jacket"
+              class="w-24 h-24 mx-auto mb-4 rounded-full object-cover"
+            />
             <h3 class="text-lg font-bold text-[var(--na-red)]">Jackets</h3>
             <p class="mt-2 text-sm text-[var(--na-gray)]">
               Insulated, impact-resistant designs built for Canadian winters.
@@ -166,24 +153,24 @@
           <div
             class="bg-white p-6 rounded-2xl text-center shadow-sm hover:shadow-md transition"
           >
-            <svg
-              class="w-12 h-12 mx-auto text-[var(--na-red)] mb-4"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="1.5"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 5l6 3-6 3-6-3 6-3z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M6 8v5l6 3 6-3V8"
-              />
-            </svg>
+            <img
+              src="images/helmet.png"
+              alt="Northern Armor helmet"
+              class="w-24 h-24 mx-auto mb-4 rounded-full object-cover"
+            />
+            <h3 class="text-lg font-bold text-[var(--na-red)]">Helmets</h3>
+            <p class="mt-2 text-sm text-[var(--na-gray)]">
+              Impact-resistant headgear with full-face coverage.
+            </p>
+          </div>
+          <div
+            class="bg-white p-6 rounded-2xl text-center shadow-sm hover:shadow-md transition"
+          >
+            <img
+              src="images/gloves.png"
+              alt="Northern Armor gloves"
+              class="w-24 h-24 mx-auto mb-4 rounded-full object-cover"
+            />
             <h3 class="text-lg font-bold text-[var(--na-red)]">Gloves</h3>
             <p class="mt-2 text-sm text-[var(--na-gray)]">
               Grip and warmth that lets you ride through the frost.
@@ -192,29 +179,11 @@
           <div
             class="bg-white p-6 rounded-2xl text-center shadow-sm hover:shadow-md transition"
           >
-            <svg
-              class="w-12 h-12 mx-auto text-[var(--na-red)] mb-4"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="1.5"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4 8l8-4 8 4-8 4-8-4z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4 12l8 4 8-4"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4 16l8 4 8-4"
-              />
-            </svg>
+            <img
+              src="images/pants.png"
+              alt="Northern Armor pants"
+              class="w-24 h-24 mx-auto mb-4 rounded-full object-cover"
+            />
             <h3 class="text-lg font-bold text-[var(--na-red)]">Pants</h3>
             <p class="mt-2 text-sm text-[var(--na-gray)]">
               Durable layers to keep you dry and protected on long rides.
