--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
         transform: translateX(0);
       }
     </style>
+    <script>
+      // Toggle mobile navigation
+      function toggleMenu() {
+        const menu = document.getElementById("mobile-nav");
+        menu.classList.toggle("hidden");
+      }
+    </script>
   </head>
-  <body class="font-sans relative min-h-screen bg-gray-100">
+  <body
+    class="font-sans relative min-h-screen bg-gradient-to-br from-gray-50 via-white to-gray-200"
+  >
     <!-- Header -->
     <header
       class="absolute top-0 left-0 w-full flex items-center justify-center py-6 z-20"
@@ -55,43 +64,63 @@
         </span>
       </a>
       <!-- Navigation -->
-      <nav
-        class="hidden md:flex space-x-6 lg:space-x-8 uppercase text-sm font-medium absolute right-8 lg:right-14"
+      <button
+        class="md:hidden absolute right-6 top-6 focus:outline-none"
+        onclick="toggleMenu()"
       >
-        <a href="#" class="nav-link">Jacket</a>
-        <a href="#" class="nav-link">Pants</a>
-        <a href="#" class="nav-link">Shoes</a>
-        <a href="#" class="nav-link">Helmet</a>
-        <a href="#" class="nav-link">Contact</a>
+        <svg
+          class="w-6 h-6"
+          fill="none"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16"
+          ></path>
+        </svg>
+      </button>
+      <nav
+        id="mobile-nav"
+        class="hidden md:flex md:space-x-6 lg:space-x-8 uppercase text-sm font-medium absolute right-8 lg:right-14 bg-white md:bg-transparent shadow md:shadow-none rounded md:rounded-none p-4 md:p-0"
+      >
+        <a href="#" class="nav-link block md:inline-block">Jacket</a>
+        <a href="#" class="nav-link block md:inline-block">Pants</a>
+        <a href="#" class="nav-link block md:inline-block">Shoes</a>
+        <a href="#" class="nav-link block md:inline-block">Helmet</a>
+        <a href="#" class="nav-link block md:inline-block">Contact</a>
       </nav>
     </header>
 
     <!-- Hero Section -->
-    <section class="flex flex-row min-h-screen relative">
-      <!-- Left side: plain white background -->
-      <div class="w-1/2 bg-white"></div>
-      <!-- Right side: background image covering entire area -->
-      <div class="w-1/2 bg-gray-900 flex items-center justify-center">
-        <img
-          src="./helmet.jpg"
-          alt="Helmet"
-          class="max-w-full max-h-full object-contain"
-        />
-      </div>
-      <!-- Company name at top center -->
-      <div
-        class="absolute inset-x-0 top-12 flex justify-center pointer-events-none"
-      >
-        <h1
-          class="text-5xl lg:text-6xl font-extrabold text-black pr-2"
-        >
-          Northern
-        </h1>
-        <h1
-          class="text-5xl lg:text-6xl font-extrabold text-white pl-2"
-        >
-          Armor
-        </h1>
+    <section
+      class="min-h-screen flex items-center justify-center px-6 md:px-12 pt-24"
+    >
+      <div class="w-full max-w-6xl grid md:grid-cols-2 gap-8 items-center">
+        <div class="text-center md:text-left space-y-6">
+          <h1 class="text-5xl lg:text-6xl font-extrabold">
+            Gear Up for the North
+          </h1>
+          <p class="text-gray-600 text-lg max-w-md mx-auto md:mx-0">
+            Durable outdoor equipment for those who brave the coldest
+            adventures.
+          </p>
+          <a
+            href="#"
+            class="inline-block bg-red-600 text-white px-8 py-3 rounded-md shadow hover:bg-red-700 transition"
+            >Shop Now</a
+          >
+        </div>
+        <div class="flex items-center justify-center">
+          <img
+            src="./helmet.jpg"
+            alt="Helmet"
+            class="max-w-full object-contain drop-shadow-xl"
+          />
+        </div>
       </div>
     </section>
   </body>
